tests/passing/correct-return-values.c
void f1() {
    return;
}

int f2() {
    return 123;
}

char f3() {
    return 'a';
}

bool f4() {
    return true;
}

char *f5() {
    return "str value";
}
