tests/failing/func-call-more-args.c

int func1(int a) {
    return 3;
}

int main() {
    func1(123, 456);
}
